Bug 28353 - Stanford App: iPad > Items are shifted to the right side on Menu screen after selecting

--- a/skins/weborder/css/products.css
+++ b/skins/weborder/css/products.css
@@ -5,10 +5,11 @@
 .product_table .product {
     display: inline-block;
     vertical-align: top;
-    width: 44%;
+    width: 47%;
     padding: 7px 7px 7px 10px;
     cursor: pointer;
     margin-top: 2px;
+    margin-right: 3%;
     border-radius: 8px;
     border-width: 1px;
     border-style: dotted;
@@ -17,12 +18,6 @@
     -moz-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-}
-.product_table .product:not(.hide):nth-child(2n) {
-    margin-left: 3%;
-}
-.product_table .product:not(.hide):nth-child(2n-1) {
-    margin-right: 3%;
 }
 .product_table .product dl {
     position: relative;
